# medical-institution-MS

./: .gitignore  CMakeLists.txt  README.md  db.c  env  main.c  menu.c  test.c  typedef.c  xmake.lua
db/: tablesdef.sql  testingdata.sql
release/macos/: libssl.1.1.dylib
script/: build  buildrelease  buildreleasemacos.sh  buildreleasewindows.ps1  testcase
